--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -327,27 +327,27 @@
 
     <string name="Page1Titlenull"></string>
     <string name="Page1Title">Wrappy</string>
-    <string name="Page2Title">Miễn phí</string>
-    <string name="Page3Title">Đám mây</string>
-    <string name="Page4Title">Đảm bảo</string>
-    <string name="Page5Title">Ma thuật</string>
-    <string name="Page6Title">Quyền lực</string>
-    <string name="Page7Title">Nhanh</string>
-    <string name="Page8Title">Riêng tư</string>
-    <string name="Page9Title">Sinh thái học</string>
-    <string name="Page10Title">Không biên giới</string>
-    <string name="Page11Title">Cuộc cách mạng</string>
-    <string name="Page1Message">Làm phẳng thế giới. Đây là thế hệ tiếp theo sns nền tảng.</string>
-    <string name="Page2Message">Wrappy là miễn phí để sử dụng: bao gồm các cuộc gọi thoại, cuộc gọi video, hội nghị truyền hình ....</string>
-    <string name="Page3Message">Wrappy cho phép bạn truy cập vào tin nhắn của bạn từ nhiều thiết bị.</string>
-    <string name="Page4Message">Tin nhắn của bạn được mã hóa và có thể tự hủy</string>
-    <string name="Page5Message">Bạn có thể dễ dàng gửi và nhận tiền từ bạn bè và gia đình.</string>
-    <string name="Page6Message">Lưu trữ không giới hạn cho dữ liệu đa phương tiện và các hồ sơ trò chuyện!</string>
-    <string name="Page7Message">Bạn có thể gửi và nhận tin nhắn ngay lập tức.</string>
-    <string name="Page8Message">Bạn có thể xóa lịch sử của bạn bất cứ lúc nào.</string>
-    <string name="Page9Message">Một cryptocurrency hệ sinh thái đơn giản.</string>
-    <string name="Page10Message">Đơn vị tiền tệ có thể được sử dụng bất cứ nơi nào, từ bất cứ nước nào.</string>
-    <string name="Page11Message">Một người tiên phong trong một kỷ nguyên sáng tạo &amp; không ngừng phát triển.</string>
+    <string name="Page2Title">Free</string>
+    <string name="Page3Title">Cloud</string>
+    <string name="Page4Title">Secure</string>
+    <string name="Page5Title">Magic</string>
+    <string name="Page6Title">Powerful</string>
+    <string name="Page7Title">Fast</string>
+    <string name="Page8Title">Privacy</string>
+    <string name="Page9Title">Ecology</string>
+    <string name="Page10Title">Borderless</string>
+    <string name="Page11Title">Revolution</string>
+    <string name="Page1Message">Flattening the World.\nThis is the next-generation SNS platform.</string>
+    <string name="Page2Message">Wrappy is free to use: Includes voice calls,\nvideo calls, TV conferences....</string>
+    <string name="Page3Message">Wrappy allows you to access your messages from multiple devices.</string>
+    <string name="Page4Message">Your messages are 100% encrypted and can be self-destructed</string>
+    <string name="Page5Message">You can easily send and receive currencies from friends and family.</string>
+    <string name="Page6Message">Unlimited storage for your media data\nand chat records!</string>
+    <string name="Page7Message">You can send and receive messages instantly.</string>
+    <string name="Page8Message">You can delete your history at all times.</string>
+    <string name="Page9Message">A simple cryptocurrency ecosystem.</string>
+    <string name="Page10Message">Currencies can be used anywhere,\nfrom any country.</string>
+    <string name="Page11Message">A pioneer in an innovative\n&amp; constantly evolving era.</string>
     <string name="StartMessaging">Bắt đầu tin nhắn</string>
 
     <string name="id_or_username">Nhập username</string>
