--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -470,7 +470,7 @@
     <string name="activity">活動</string>
     <string name="error_when_refresh_token">不能更新代幣記錄, 請再試</string>
     <string name="registration">註册程序</string>
-    <string name="update_profile_success">更新成功</string>
+    <string name="update_profile_success">成功更新</string>
     <string name="update_profile_fail">更新失敗</string>
     <string name="error_upload_image">更新失敗</string>
     <string name="logout_all_devices">登出所有設備</string>
