--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -92,12 +92,14 @@
     <string name="menu_contact_nickname">ชื่อเล่นแหล่งติดต่อ</string>
     <string name="menu_view_blocked">ถูกปิดกั้น</string>
     <string name="nickname">ชื่อเล่น</string>
+
     <string name="confirm_delete_contact">แหล่งติดต่อ \"<xliff:g id="user">%1$s</xliff:g>\" จะถูกลบ</string>
     <string name="confirm_block_contact">แหล่งติดต่อ \"<xliff:g id="user">%1$s</xliff:g>\" จะถูกปิดกั้น</string>
     <string name="add_contact_success">แหล่งติดต่อ \"<xliff:g id="user">%1$s</xliff:g>\" ถูกเพิ่มแล้ว</string>
     <string name="delete_contact_success">แหล่งติดต่อ \"<xliff:g id="user">%1$s</xliff:g>\" ถูกลบแล้ว</string>
     <string name="block_contact_success">แหล่งติดต่อ \"<xliff:g id="user">%1$s</xliff:g>\" ถูกปิดกั้นแล้ว</string>
     <string name="unblock_contact_success">แหล่งติดต่อ \"<xliff:g id="user">%1$s</xliff:g>\" ถูกยกเลิกการปิดกั้นแล้ว</string>
+
     <string name="menu_verify">ตรวจสอบแหล่งติดต่อ</string>
     <string name="empty_conversation_group">ไม่พบการสนทนาที่เปิดอยู่ แตะเพื่อเริ่มต้นการพูดคุย!</string>
     <string name="search_label">แหล่งติดต่อ</string>
@@ -110,11 +112,12 @@
     <string name="contact_offline"><xliff:g id="user">%1$s</xliff:g> ออฟไลน์อยู่</string>
     <string name="contact_joined"><xliff:g id="user">%1$s</xliff:g> เข้าร่วมแล้ว</string>
     <string name="contact_left"><xliff:g id="user">%1$s</xliff:g> ออกไปแล้ว</string>
+
     <string name="file_transfer">ส่งผ่านไฟล์</string>
     <string name="accept_transfer_">ยอมรับการส่งผ่านไหม</string>
     <string name="wants_to_send_you_the_file">ต้องการส่งไฟล์ให้คุณ</string>
     <string name="no_connection_for_sending">ไม่พบการเชื่อมต่อสำหรับการส่งการแชร์ของคุณ!</string>
-    <string name="compose_hint">ส่งข้อความ</string>
+
     <string name="compose_hint_secure">ส่งข้อความส่วนตัว</string>
     <string name="menu_end_conversation">จบการพูดคุย</string>
     <string name="select_link_title">เลือกลิงก์</string>
@@ -306,6 +309,7 @@
     <string name="group_admin">แอดมิน</string>
     <string name="group_you">คุณ</string>
     <string name="title_activity_launcher">กิจกรรมลอนเชอร์</string>
+
     <string name="Page1Titlenull"></string>
     <string name="Page1Title">Wrappy</string>
     <string name="Page2Title">ฟรี</string>
@@ -449,6 +453,7 @@
     <string name="current_balance">สมดุลปัจจุบัน</string>
     <string name="add_photo">เพิ่มรูปภาพ!</string>
     <string name="error_upload_photo">การอัพโหลดรูปภาพกลุ่มล้มเหลว!</string>
+    <string name="error_creating_group">Create Group Fail</string>
     <string name="select_file_to_send">เลือกไฟล์</string>
     <string name="google_play_services_not_available">บริการกูเกิ้ลเพลย์ไม่สามารถใช้ได้</string>
     <string name="english">อังกฤษ</string>
@@ -492,10 +497,8 @@
     <string name="verify_send_sms_fail">การส่งเอสเอ็มเอสล้มเหลว</string>
     <string name="verify_send_sms_success">ส่งเอสเอ็มเอสเสร็จแล้ว</string>
     <string name="verify_fail">การตรวจสอบล้มเหลว</string>
-    <string name="from">จาก</string>
     <string name="security_question_change">เปลี่ยนคำถามเพื่อความปลอดภัย</string>
     <string name="security_change_old_question">ตอบคำถามเพื่อความปลอดภัยเก่าของคุณ</string>
-    <string name="level">ระดับ</string>
     <string name="success">สำเร็จ!</string>
     <string name="secu_success_description">เปลี่ยนคำถามเพื่อความปลอดภัยของคุณเสร็จแล้ว</string>
     <string name="fail">ล้มเหลว</string>
@@ -524,4 +527,7 @@
     <string name="copy_and_paste_url">If you cannot click the URL, please copy and paste the URL into your browser.</string>
     <string name="back_to_login">Back to login</string>
     <string name="resend_link">Resend</string>
+    <string name="local_time_format">MMM dd, yyyy</string>
+    <string name="promotion_format">%1$s จาก <b>%2$s</b> ระดับ (%d)</string>
+
 </resources>
